--- a/styles/style.css
+++ b/styles/style.css
@@ -35,9 +35,16 @@ nav a {
     font-size: 1.4em;
 }
 
-table td {
+table.bike-table td {
     width: 20em;
     height: 13em;
+    overflow: hidden;
+    display: inline-block;
+}
+
+table.expert-table td {
+    width: 20em;
+    height: 30em;
     overflow: hidden;
     display: inline-block;
 }
